deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: website
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: triptripgo
spec:
  selector:
    matchLabels:
      app: website
  minReadySeconds: 10
  replicas: 2
  template:
    metadata:
      labels:
        app: website
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - website
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: website
          image: registry.digitalocean.com/kilowatt/triptripgo-website:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 300Mi
            requests:
              cpu: 200m
              memory: 300Mi
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 2
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 2
            successThreshold: 2
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: triptripgo
  labels:
    app: website
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: website
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: triptripgo
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: 'cloudflare-cluster-issuer'
spec:
  ingressClassName: nginx
  tls:
    - secretName: www-triptripgo-hk-tls
      hosts:
        - www.triptripgo.hk
        - triptripgo.hk
  rules:
    - host: www.triptripgo.hk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 3000
